Project

General

Profile

Actions

Bug #42756

closed

unnecessary error message "calc_pg_upmaps failed to build overfull/underfull"

Added by Neha Ojha over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous, mimic, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

After enabling ceph-mgr module balancer in upmap mode, we can see in ceph-mgr logs messages like:
-1 calc_pg_upmaps failed to build overfull
-1 calc_pg_upmaps failed to build underfull

These aren't real errors, the line that prints this should be "ldout" instead of "lderr".

Example:

2019-11-08 05:49:18.871499 7f7fd2290700 10 calc_pg_upmaps pools 4
2019-11-08 05:49:18.871509 7f7fd2290700 20 calc_pg_upmaps 4.0 up [4,14,0]
2019-11-08 05:49:18.871514 7f7fd2290700 20 calc_pg_upmaps 4.1 up [7,2,17]
2019-11-08 05:49:18.871518 7f7fd2290700 20 calc_pg_upmaps 4.2 up [15,8,16]
2019-11-08 05:49:18.871521 7f7fd2290700 20 calc_pg_upmaps 4.3 up [1,12,10]
2019-11-08 05:49:18.871524 7f7fd2290700 20 calc_pg_upmaps 4.4 up [7,3,5]
2019-11-08 05:49:18.871528 7f7fd2290700 20 calc_pg_upmaps 4.5 up [15,17,1]
2019-11-08 05:49:18.871531 7f7fd2290700 20 calc_pg_upmaps 4.6 up [6,13,11]
2019-11-08 05:49:18.871534 7f7fd2290700 20 calc_pg_upmaps 4.7 up [9,10,11]
2019-11-08 05:49:18.871539 7f7fd2290700 20 calc_pg_upmaps pool 4 ruleno 0 weight-map {0=0.0555556,1=0.0555556,2=0.0555556,3=0.0555556,4=0.0555556,5=0.0555556,6=0.0555556,7=0.0555556,8=0.0555556,9=0.0555556,10=0.0555556,11=0.0555556,12=0.0555556,13=0.0555556,14=0.0555556,15=0.0555556,16=0.0555556,17=0.0555556}
2019-11-08 05:49:18.871550 7f7fd2290700 20  osd.0 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871551 7f7fd2290700 20  osd.1 weight 0.0555556 pgs 2
2019-11-08 05:49:18.871553 7f7fd2290700 20  osd.2 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871553 7f7fd2290700 20  osd.3 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871554 7f7fd2290700 20  osd.4 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871555 7f7fd2290700 20  osd.5 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871556 7f7fd2290700 20  osd.6 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871557 7f7fd2290700 20  osd.7 weight 0.0555556 pgs 2
2019-11-08 05:49:18.871558 7f7fd2290700 20  osd.8 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871559 7f7fd2290700 20  osd.9 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871560 7f7fd2290700 20  osd.10 weight 0.0555556 pgs 2
2019-11-08 05:49:18.871560 7f7fd2290700 20  osd.11 weight 0.0555556 pgs 2
2019-11-08 05:49:18.871561 7f7fd2290700 20  osd.12 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871562 7f7fd2290700 20  osd.13 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871563 7f7fd2290700 20  osd.14 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871563 7f7fd2290700 20  osd.15 weight 0.0555556 pgs 2
2019-11-08 05:49:18.871565 7f7fd2290700 20  osd.16 weight 0.0555556 pgs 1
2019-11-08 05:49:18.871566 7f7fd2290700 20  osd.17 weight 0.0555556 pgs 2
2019-11-08 05:49:18.871567 7f7fd2290700 10  osd_weight_total 1
2019-11-08 05:49:18.871567 7f7fd2290700 10  pgs_per_weight 24
2019-11-08 05:49:18.871569 7f7fd2290700 20  osd.0       pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871570 7f7fd2290700 20  osd.1       pgs 2   target 1.33333  deviation 0.666667
2019-11-08 05:49:18.871572 7f7fd2290700 20  osd.2       pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871573 7f7fd2290700 20  osd.3       pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871574 7f7fd2290700 20  osd.4       pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871576 7f7fd2290700 20  osd.5       pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871577 7f7fd2290700 20  osd.6       pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871579 7f7fd2290700 20  osd.7       pgs 2   target 1.33333  deviation 0.666667
2019-11-08 05:49:18.871580 7f7fd2290700 20  osd.8       pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871581 7f7fd2290700 20  osd.9       pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871583 7f7fd2290700 20  osd.10      pgs 2   target 1.33333  deviation 0.666667
2019-11-08 05:49:18.871584 7f7fd2290700 20  osd.11      pgs 2   target 1.33333  deviation 0.666667
2019-11-08 05:49:18.871585 7f7fd2290700 20  osd.12      pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871587 7f7fd2290700 20  osd.13      pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871588 7f7fd2290700 20  osd.14      pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871590 7f7fd2290700 20  osd.15      pgs 2   target 1.33333  deviation 0.666667
2019-11-08 05:49:18.871591 7f7fd2290700 20  osd.16      pgs 1   target 1.33333  deviation -0.333333
2019-11-08 05:49:18.871592 7f7fd2290700 20  osd.17      pgs 2   target 1.33333  deviation 0.666667
2019-11-08 05:49:18.871598 7f7fd2290700 -1 calc_pg_upmaps failed to build overfull

Related issues 3 (0 open3 closed)

Copied to RADOS - Backport #42796: luminous: unnecessary error message "calc_pg_upmaps failed to build overfull/underfull"ResolvedNathan CutlerActions
Copied to RADOS - Backport #42797: nautilus: unnecessary error message "calc_pg_upmaps failed to build overfull/underfull"ResolvedDavid ZafmanActions
Copied to RADOS - Backport #42798: mimic: unnecessary error message "calc_pg_upmaps failed to build overfull/underfull"ResolvedDavid ZafmanActions
Actions #1

Updated by Neha Ojha over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 31542
Actions #2

Updated by Neha Ojha over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42796: luminous: unnecessary error message "calc_pg_upmaps failed to build overfull/underfull" added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42797: nautilus: unnecessary error message "calc_pg_upmaps failed to build overfull/underfull" added
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42798: mimic: unnecessary error message "calc_pg_upmaps failed to build overfull/underfull" added
Actions #6

Updated by David Zafman over 4 years ago

  • Backport changed from luminous,mimic,nautilus to luminous, mimic, nautilus
Actions #7

Updated by David Zafman about 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF